<resources>
    <string name="app_name">M3</string>
    <string name="miracle_morning_mentor">Miracle Morning Mentor</string>
    <string name="made_by_ai_and_hm">made by AI and HM</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="signingin">Signing in…</string>
    <string name="reset_password">Reset password</string>
    <string name="receive_reset_link_on_email">Receive reset Link on email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="create_account">Create Account</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="user_age">User Age</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="begin_a_new_journey">Begin a new journey</string>
    <string name="begin_your_morning_with_us">begin your morning with us</string>
    <string name="begin_every_morning_with_us">Begin every morning with us</string>
    <string name="surviving_through_the_day_while_living_the_same_routine">surviving through the day while living the same routine</string>
    <string name="tired_of_starting_day_drained">Tired of starting day with being drained?</string>
    <string name="get_boosted">Get Boosted</string>
    <string name="stimulate_your_senses">Stimulate your senses</string>
    <string name="about_us">About us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="system_settings">System settings</string>
    <string name="demo_habit">Drinking water</string>
    <string name="about_description1">This app will help you create a morning ritual which will improve your health and increase brain stimulation.</string>
    <string name="about_description2">This application is developed as <b>MCA Semester III college project</b>.</string>
    <string name="about_description3">This app is developed by <b>Atharva Ikhar (AI)</b> and <b>Harshada Mali (HM)</b></string>
    <string name="version_info">(v0.6.20)</string>
    <string name="github_logo">Github logo</string>
    <string name="about_description4">This application is <b>currently in pre-release phase</b> with current version :</string>
    <string name="release_logo">Release logo</string>
    <string name="music_settings">Music settings</string>
    <string name="selected_music">Selected music</string>
    <string name="selected_duration">Selected duration</string>
    <string name="affirmation_settings">Affirmation settings</string>
    <string name="click_to_update_settings">(Click to update settings)</string>
    <string name="click_and_hold_to_update_settings">(Click and hold to update settings)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="visualization_settings">Visualization settings</string>
    <string name="current_visualization">Current Visualization</string>
    <string name="exercise_settings">Exercise Settings</string>
    <string name="click_on_item_to_update_the_settings">(Click on item to update the settings)</string>
    <string name="selected_pranayama_s">Selected Pranayama(s)</string>
    <string name="selected_exercise_s">Selected Exercise(s)</string>
    <string name="copyright_m3">&#169; M3 2022</string>
    <string name="start_the_routine">Start the routine</string>
    <string name="let_s_start_with_that_daily_mediation_activity_being_with_yourself_let_all_of_your_thoughts_flow_through">Let\'s start with that daily mediation activity. Being with yourself. Let all of your thoughts flow through.</string>
    <string name="silence">Silence</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="goal_completed">Goal completed :)</string>
    <string name="button_to_next_activity">Button to next activity</string>
    <string name="activity_completed">activity completed!</string>
    <string name="activities_completed">All activities completed for today!</string>
    <string name="affirmations">Affirmations</string>
    <string name="visualization">Visualization</string>
    <string name="go_to_next_screen">Go to next screen</string>
    <string name="play_pause">Play/Pause</string>
    <string name="go_to_next_activity">Go to next activity</string>
    <string name="hurrey">Hurrey</string>
    <string name="congrats">Congratulations!</string>
    <string name="exercises">Exercises</string>
    <string name="reading">Reading</string>
    <string name="below_are_the_affirmations_choosen_by_you_which_you_will_be_reminded_of_throughout_the_day_you_can_proceed_with_your_next_task">Below are the affirmations choosen by you, which you will be reminded of throughout the day. You can proceed with your next task</string>
    <string name="remember_user_if_you_see_your_goal_you_are_more_likely_to_achieve_it">Remember User, if you “see” your goal, you are more likely to achieve it.</string>
    <string name="read_more">Read more</string>
    <string name="you_will_achieve_it">You will achieve it ✨✨</string>
    <string name="these_are_the_daily_activities_you_have_choosen_please_complete_the_following_then_click_on_button">These are the daily activities you have choosen. Please complete the following then click on button :</string>
    <string name="exercises_to_do">Exercises to do:</string>
    <string name="pranayam_to_do">Pranayam to do:</string>
    <string name="please_perform_this_activity_for_at_least_5_minutes_and_then_mark_it_as_complete">Please perform this activity for at least 5 minutes and then mark it as complete</string>
    <string name="i_have_performed_the_above_exercise_pranayama_and_i_am_not_just_clicking_without_doing_the_exercise_pranayama">I have performed the above exercise/pranayama, and I am not just clicking without doing the exercise/pranayama.</string>
    <string name="to_keep_track_of_your_reading_habit_you_can_enter_the_data_now_or_skip_it_for_later">To keep track of your reading habit, You can enter the data now or skip it for later</string>
    <string name="how_many_pages_articles_have_you_read">How many pages/articles have you read?</string>
    <string name="notes">Notes</string>
    <string name="reading_type">Reading type</string>
    <string name="_1">1</string>
    <string name="bookname">BookName</string>
    <string name="book">Book</string>
    <string name="articles">Articles</string>
    <string name="book_name_notes">Book Name/Notes</string>
    <string name="journaling">Journaling</string>
    <string name="speak_your_mind_how_you_felt_through_out_the_day_any_highlight_which_made_it_special">Speak your mind, how you felt through out the day, any highlight which made it special.</string>
    <string name="so_today_was_a_great_day">So, Today was a great day...</string>
    <string name="share">Share</string>
    <string name="share_subject">Share the app</string>
    <string name="share_using">Share</string>
    <string name="not_yet_attempted">Not yet attempted</string>
    <string name="s_image">S image</string>
    <string name="a_image">A image</string>
    <string name="v_image">V image</string>
    <string name="e_image">E image</string>
    <string name="r_image">R image</string>
    <string name="j_image">J image</string>
    <string name="s">S</string>
    <string name="a">A</string>
    <string name="v">V</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="not_attempted">Not attempted</string>
    <string name="timeline">Timeline</string>
    <string name="see_you_tomorrow">See you tomorrow</string>
    <string name="feelings">Feelings</string>
    <string name="which_feeling_you_felt_mostly_throughout_the_day">Which feeling you felt mostly throughout the day?</string>
    <string name="how_intense_is_that_feeling">How intense is that feeling?</string>
    <string name="music">Music</string>
    <string name="duration">Duration</string>
    <string name="visualization_name">Visualization Name</string>
    <string name="visualization_image">Visualization Image</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="pranayams">Pranayams</string>
    <string name="to_become_cool_as_cucumber">to become cool as cucumber in daily life</string>
    <string name="profile_details">Profile Details</string>
    <string name="edit_and_view_profile_info">edit and view profile info</string>
    <string name="journal_logs">Journal Logs</string>
    <string name="revisit_your_old_journals">revisit your old journals</string>
    <string name="see_your_ranking">See Your Ranking</string>
    <string name="to_see_ranking_among_other_users">to see ranking among other users</string>
    <string name="mood_analysis">Mood analysis</string>
    <string name="more_info_about_your_mood_feeling">more info about your mood/feeling</string>
    <string name="profile_info">Profile info</string>
    <string name="update_name">Update Name</string>
    <string name="enter_email_to_verify">Enter Email to verify</string>
    <string name="i_know_it">I know it</string>
    <string name="rankings">Rankings</string>
    <string name="your_account_setup_is_completed">Your account setup is completed!</string>
    <string name="now_you_can_start_using_the_app">Now you can start using the app</string>
    <string name="your_rank">Your Rank</string>
    <string name="joined_on">Joined M3 on</string>
    <string name="rank_list">Rank List</string>
    <string name="routine_completed">Routine completed</string>
    <string name="this_section_is_still_under_development">This section is still under development</string>
    <string name="_169_m3">© M3</string>
    <string name="this_is_how_you_felt_most_of_the_time">This is how you felt most of the time</string>
    <string name="this_was_the_intensity_of_emotions_which_you_felt">This was the intensity of emotions which you felt</string>
    <string name="user_support">User Support</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="if_you_by_any_means_need_to_contact_us_about_any_query_or_suggestion_or_feedback_you_can_mail_us_at_below_email">If you by any means need to contact us about any query or suggestion or feedback. You can reach us by mail.</string>
    <string name="you_can_request_for_access_to_our_paid_feature_by_clicking_on_below_button">You can request for access to our paid feature by clicking on below link \n \nWe will get back to you as soon as possible \n </string>
    <string name="you_can_write_us_about_the_bug_on_below_mail_n_we_will_try_to_resolve_it_as_soon_as_possible">You can write us about the bug on below mail. \nWe will try to resolve it as soon as possible.</string>
    <string name="mentalhealthtrackerproject_gmail_com">mentalhealthtrackerproject@gmail.com</string>
    <string name="no_you_cannot_add_your_past_day_s_routine_log_yet_n_n_but_we_understand_that_user_can_be_busy_and_forget_to_log_that_s_why_user_can_log_anytime_till_11_59_pm_of_that_day_about_their_routine">No, you cannot add your past day\'s routine log yet. \n \nBut we understand that user can be busy and forget to log, that\'s why user can log anytime till 11:59 pm of that day about their routine</string>
</resources>