<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateNewAccount">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/nunito" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <EditText
        android:id="@+id/EmailField"
        android:hint="@string/email"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="Email"
        android:fontFamily="@font/nunito"/>

    <EditText
        android:id="@+id/PasswordField"
        android:paddingTop="20sp"
        android:hint="@string/password"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:fontFamily="@font/nunito"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"/>

    <EditText
        android:id="@+id/FNameField"
        android:paddingTop="20sp"
        android:hint="@string/first_name"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"/>

    <EditText
        android:id="@+id/LNameField"
        android:paddingTop="20sp"
        android:hint="@string/last_name"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"/>

    <EditText
        android:id="@+id/DateField"
        android:paddingTop="20sp"
        android:hint="@string/date_of_birth"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/AddAccountBtn"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:fontFamily="@font/nunito"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>