<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aboutDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTitle"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/about_description1"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/aboutDes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDes"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/about_description2"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/aboutDes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDes1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/about_description3"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/aboutDes3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDes2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/about_description4"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDes3"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        android:text="@string/version_info"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/socialBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/versionName"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/github_logo"
        android:src="@drawable/githublogo" />

    <ImageView
        android:id="@+id/socialBtn1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/versionName"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/release_logo"
        android:src="@drawable/apklogo" />

</RelativeLayout>