<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileOptions.ViewProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/profile_info"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/ProfileTitle"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/FNameField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FName"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/LName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FNameField"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/LNameField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LName"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LNameField"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/user_age"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Age"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EmailField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Email"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email_to_verify"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/UpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmailField"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/update_name" />

    </RelativeLayout>

</ScrollView>