<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SystemSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/system_settings"
        android:textColor="@color/black"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sysSetting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/music_settings"
        android:textColor="@color/primaryColor"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/sysSettingSub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sysSetting1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/selected_music"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/musicPreferred"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sysSettingSub1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/sysSettingSub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicPreferred"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/selected_duration"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/durationPreferred"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sysSettingSub2"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/sysSetting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/durationPreferred"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/affirmation_settings"
        android:textColor="@color/primaryColor"
        android:textSize="25sp" />


</RelativeLayout>