<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <EditText
        android:id="@+id/EmailField"
        android:hint="@string/email"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="Email"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/ReceiveMailBtn"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:text="@string/receive_reset_link_on_email"
        android:textAllCaps="false"
        android:textSize="18sp" />
</LinearLayout>